--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 <p class="!text-gray-600">Elegí el camino que mejor se adapte a tu momento actual.</p>
             </div>
 
-            <!-- Filtros -->
+  <!-- Filtros -->
             <div class="flex flex-wrap justify-center gap-4 mb-12">
                 <button onclick="filterOffers('all')" class="offer-filter-btn active bg-sama-dark text-white px-6 py-2 rounded-full text-sm font-bold transition">Ver Todo</button>
                 <button onclick="filterOffers('start')" class="offer-filter-btn bg-white text-sama-text border hover:bg-gray-50 px-6 py-2 rounded-full text-sm font-bold transition">Empezar</button>
@@ -448,71 +448,70 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 
-                <!-- Offer 1 -->
+                <!-- Offer 1: Tripwire -->
                 <div class="offer-card start bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-blue-400">
                     <div class="p-6 flex-grow">
                         <span class="bg-blue-100 text-blue-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Primeros Pasos</span>
-                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Cursos de Iniciación</h3>
-                        <p class="text-gray-600 text-sm mb-6">Los fundamentos de las 4 Inteligencias del Sistema Sama Sana para aplicar hoy mismo.</p>
+                        <h3 class="font-serif text-2xl font-bold !text-sama-text mt-4 mb-2">Cursos de Iniciación</h3>
+                        <p class="!text-gray-600 text-sm mb-6">Los fundamentos de las 4 Inteligencias del Sistema Sama Sana para aplicar hoy mismo.</p>
                         <ul class="space-y-3 mb-6">
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Alimentación saludable</li>
+                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Alimentación saludable</li>
                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Rutina de vida equilibrada</li>
                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Emociones y Relaciones</li>
                              <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Encontrando tu Misión y Propósito</li>
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
-                        <p class="text-3xl font-bold text-sama-text mb-4">$27 <span class="text-sm font-normal text-gray-500">USD c/u</span></p>
-                       <a href="https://samaequilibrio.tiendup.com/" target="_blank" class="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition text-center">Empezar Ahora</a>
+                        <p class="text-3xl font-bold !text-sama-text mb-4">$27 <span class="text-sm font-normal text-gray-500">USD c/u</span></p>
+                        <!-- LINK PLACEHOLDER -->
+                        <a href="https://tusitio.com/curso-iniciacion" target="_blank" class="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition text-center">Empezar Ahora</a>
+                    </div>
                 </div>
 
-                <!-- Offer 2 -->
+                <!-- Offer 2: Membership -->
                 <div class="offer-card grow bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-sama-primary relative">
                     <div class="absolute top-0 right-0 bg-sama-accent text-sama-dark text-xs font-bold px-3 py-1 rounded-bl-lg">RECOMENDADO</div>
                     <div class="p-6 flex-grow">
                         <span class="bg-green-100 text-green-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Membresía</span>
-                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Comunidad Sama Sana</h3>
-                        <p class="text-gray-600 text-sm mb-6">Tu Comunidad de salud. Acompañamiento continuo y Q&A grupal.</p>
+                        <h3 class="font-serif text-2xl font-bold !text-sama-text mt-4 mb-2">Comunidad Sama Sana</h3>
+                        <p class="!text-gray-600 text-sm mb-6">Tu Comunidad de salud. Acompañamiento continuo.</p>
                         <ul class="space-y-3 mb-6">
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Sesiones en vivo</li>
+                           <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Sesiones en vivo</li>
                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Biblioteca de contenido</li>
                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Grupo de apoyo</li>
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
-                        <p class="text-3xl font-bold text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
-                        <a href="https://ayurvedasama.com/" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme a la Comunidad</a>
+                        <p class="text-3xl font-bold !text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
+                        <!-- LINK PLACEHOLDER -->
+                        <a href="https://tusitio.com/comunidad" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme a la Comunidad</a>
                     </div>
                 </div>
 
-<!-- Offer 3 -->
+                <!-- Offer 3: Consultations -->
                 <div class="offer-card deep bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-purple-500 md:col-span-2 lg:col-span-1">
                     <div class="p-6 flex-grow">
                         <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
-                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
-                        <p class="text-gray-600 text-sm mb-6">Diagnóstico profundo y plan de tratamiento específico.</p>
+                        <h3 class="font-serif text-2xl font-bold !text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
+                        <p class="!text-gray-600 text-sm mb-6">Diagnóstico profundo y tratamiento.</p>
                         
                         <div class="bg-gray-100 p-1 rounded-lg flex mb-4">
                             <button onclick="toggleConsult('team')" id="btn-team" class="w-1/2 py-1 rounded-md text-sm font-bold bg-white shadow-sm text-sama-text transition">Equipo Sama</button>
                             <button onclick="toggleConsult('dr')" id="btn-dr" class="w-1/2 py-1 rounded-md text-sm font-bold text-gray-500 hover:bg-gray-200 transition">Dr. Nicasio</button>
                         </div>
-
                         <div id="content-team">
                             <p class="text-xs text-gray-500 mb-2">Atención junto a terapéutas formados en Academia Sama Marga.</p>
                             <ul class="space-y-2 mb-4">
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico por el Dr.</li>
                                  <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Seguimiento por los Colaboradores.</li>
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Disponibilidad Rápida</li>
-                            </ul>
-                            <div class="mt-auto">
-                                <p class="text-2xl font-bold text-sama-text mb-2">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
+                                <!-- LINK PLACEHOLDER -->
+                                <a href="https://calendly.com/sama/equipo" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
                             </div>
                         </div>
-
                         <div id="content-dr" class="hidden">
                             <p class="text-xs text-gray-500 mb-2">Atención exclusiva con el Dr. Nicasio (Lista de Espera).</p>
-                            <ul class="space-y-2 mb-4">
+                           <ul class="space-y-2 mb-4">
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-star text-yellow-500 mr-2"></i> Mentoría Directa</li>
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-star text-yellow-500 mr-2"></i> Casos Complejos</li>
                             </ul>
@@ -524,7 +523,6 @@
                     </div>
                 </div>
 
-
                  <!-- Offer 4: High Ticket (Hotel) -->
                  <div class="offer-card deep w-full bg-gradient-to-r from-sama-dark to-sama-primary rounded-2xl shadow-lg text-white p-8 relative overflow-hidden md:col-span-2 lg:col-span-3 flex flex-col md:flex-row items-center justify-between"> 
                     <div class="absolute right-0 top-0 h-full w-1/3 bg-white/10 skew-x-12"></div>
@@ -534,6 +532,7 @@
                         <p class="text-gray-100 mb-4">4 noches de inmersión total en Hotel Chacras de Sierras. Desintoxicación, alimentación y aprendizaje intensivo.</p>
                     </div>
                     <div class="relative z-10 w-full md:w-1/3 text-center md:text-right">
+                        <!-- LINK PLACEHOLDER -->
                         <a href="https://tusitio.com/retiro-wellness" target="_blank" class="bg-white text-sama-dark hover:bg-gray-100 font-bold px-8 py-3 rounded-full shadow-lg transition transform hover:scale-105 w-full md:w-auto inline-block text-center">
                             Ver Detalles
                         </a>
@@ -550,12 +549,12 @@
                         <p class="text-gray-600 mb-4">¿Te gustaría ser terapeuta Ayurveda? Formate con el método del Dr. Nicasio.</p>
                     </div>
                     <div class="relative z-10 w-full md:w-1/3 text-center md:text-right">
-                        <a href="https://tudominio.com/academia" target="_blank" class="bg-sama-academy hover:bg-yellow-600 text-white font-bold px-8 py-3 rounded-full shadow-lg transition transform hover:scale-105 w-full md:w-auto inline-block">
+                        <!-- LINK PLACEHOLDER -->
+                        <a href="https://tudominio.com/academia" target="_blank" class="bg-sama-academy hover:bg-yellow-600 text-white font-bold px-8 py-3 rounded-full shadow-lg transition transform hover:scale-105 w-full md:w-auto inline-block text-center">
                             Ver Formación
                         </a>
                     </div>
                  </div>
-
             </div>
         </div>
     </section>
