--- a/index.html
+++ b/index.html
@@ -505,6 +505,9 @@
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico por el Dr.</li>
                                  <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Seguimiento por los Colaboradores.</li>
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Disponibilidad Rápida</li>
+                                 </ul>
+                            <div class="mt-auto">
+                                <p class="text-2xl font-bold text-sama-text mb-2">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
                                 <!-- LINK PLACEHOLDER -->
                                 <a href="https://calendly.com/sama/equipo" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
                             </div>
@@ -517,7 +520,7 @@
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <a href="<a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
+                                <a href="<a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>" 
                             </div>
                         </div>
                     </div>
