--- a/index.html
+++ b/index.html
@@ -488,39 +488,39 @@
                     </div>
                 </div>
 
-                <!-- Offer 3: Consultations -->
+               <!-- Offer 3 -->
                 <div class="offer-card deep bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-purple-500 md:col-span-2 lg:col-span-1">
                     <div class="p-6 flex-grow">
                         <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
-                        <h3 class="font-serif text-2xl font-bold !text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
-                        <p class="!text-gray-600 text-sm mb-6">Diagnóstico profundo y tratamiento.</p>
+                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Sesión Médica 1-1</h3>
+                        <p class="text-gray-600 text-sm mb-6">Diagnóstico profundo y plan de tratamiento específico.</p>
                         
                         <div class="bg-gray-100 p-1 rounded-lg flex mb-4">
                             <button onclick="toggleConsult('team')" id="btn-team" class="w-1/2 py-1 rounded-md text-sm font-bold bg-white shadow-sm text-sama-text transition">Equipo Sama</button>
                             <button onclick="toggleConsult('dr')" id="btn-dr" class="w-1/2 py-1 rounded-md text-sm font-bold text-gray-500 hover:bg-gray-200 transition">Dr. Nicasio</button>
                         </div>
+
                         <div id="content-team">
                             <p class="text-xs text-gray-500 mb-2">Atención junto a terapéutas formados en Academia Sama Marga.</p>
                             <ul class="space-y-2 mb-4">
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico por el Dr.</li>
                                  <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Seguimiento por los Colaboradores.</li>
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Disponibilidad Rápida</li>
-                                 </ul>
+                            </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <!-- LINK PLACEHOLDER -->
-                                <a href="https://calendly.com/sama/equipo" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
+                               <a href="https://calendly.com/sama/equipo" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
                             </div>
                         </div>
                         <div id="content-dr" class="hidden">
                             <p class="text-xs text-gray-500 mb-2">Atención exclusiva con el Dr. Nicasio (Lista de Espera).</p>
-                           <ul class="space-y-2 mb-4">
+                            <ul class="space-y-2 mb-4">
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-star text-yellow-500 mr-2"></i> Mentoría Directa</li>
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-star text-yellow-500 mr-2"></i> Casos Complejos</li>
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <a href="<a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>" 
+                                <a href="<a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
                             </div>
                         </div>
                     </div>
