--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                     </div>
                 </div>
 
-               <!-- Offer 3 -->
+<!-- Offer 3 -->
                 <div class="offer-card deep bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-purple-500 md:col-span-2 lg:col-span-1">
                     <div class="p-6 flex-grow">
                         <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
@@ -509,9 +509,10 @@
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                               <a href="https://calendly.com/sama/equipo" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
+                                <button class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition">Agendar Equipo</button>
                             </div>
                         </div>
+
                         <div id="content-dr" class="hidden">
                             <p class="text-xs text-gray-500 mb-2">Atención exclusiva con el Dr. Nicasio (Lista de Espera).</p>
                             <ul class="space-y-2 mb-4">
@@ -520,7 +521,7 @@
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <a href="<a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
+                                <button class="w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition">Aplicar Lista Espera</button>
                             </div>
                         </div>
                     </div>
