--- a/index.html
+++ b/index.html
@@ -499,7 +499,6 @@
                             <button onclick="toggleConsult('team')" id="btn-team" class="w-1/2 py-1 rounded-md text-sm font-bold bg-white shadow-sm text-sama-text transition">Equipo Sama</button>
                             <button onclick="toggleConsult('dr')" id="btn-dr" class="w-1/2 py-1 rounded-md text-sm font-bold text-gray-500 hover:bg-gray-200 transition">Dr. Nicasio</button>
                         </div>
-
                         <div id="content-team">
                             <p class="text-xs text-gray-500 mb-2">Atención junto a terapéutas formados en Academia Sama Marga.</p>
                             <ul class="space-y-2 mb-4">
@@ -509,10 +508,9 @@
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <button class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition">Agendar Equipo</button>
+                                <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
                             </div>
                         </div>
-
                         <div id="content-dr" class="hidden">
                             <p class="text-xs text-gray-500 mb-2">Atención exclusiva con el Dr. Nicasio (Lista de Espera).</p>
                             <ul class="space-y-2 mb-4">
@@ -521,7 +519,7 @@
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <button class="w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition">Aplicar Lista Espera</button>
+                                <a href="<a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
                             </div>
                         </div>
                     </div>
