--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     <!-- Top Part: Content & Logic -->
                     <div class="p-6 flex-grow">
                         <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
-                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Sesión Médica 1-1</h3>
+                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
                         <p class="text-gray-600 text-sm mb-6">Diagnóstico profundo y plan de tratamiento específico.</p>
                         
                         <!-- Toggle Buttons -->
@@ -522,6 +522,24 @@
                             </ul>
                         </div>
                     </div>
+
+                    <!-- Bottom Part: Footer (Gray Background) -->
+                    <div class="p-6 bg-gray-50 border-t mt-auto">
+                        
+                        <!-- Team Action -->
+                        <div id="action-team">
+                            <p class="text-3xl font-bold text-sama-text mb-4">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
+                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
+                        </div>
+
+                        <!-- Dr Action - Hidden by default -->
+                        <div id="action-dr" class="hidden">
+                            <p class="text-3xl font-bold text-sama-text mb-4">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
+                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
+                        </div>
+
+                    </div>
+                </div>
 
                     <!-- Bottom Part: Footer (Gray Background) -->
                     <div class="p-6 bg-gray-50 border-t mt-auto">
