--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 
             <!-- Menú Desktop -->
             <div class="hidden md:flex space-x-8 text-sama-text font-medium">
-                <a href="#problema" class="hover:text-sama-dark transition">Soluciones</a>
+                <a href="#problema" class="hover:text-sama-dark transition">Es para mí?</a>
                 <a href="#metodo" class="hover:text-sama-dark transition">El Método</a>
                 <a href="#bio" class="hover:text-sama-dark transition">Dr. Nicasio</a>
-                <a href="#ofertas" class="hover:text-sama-dark transition">Programas</a>
+                <a href="#ofertas" class="hover:text-sama-dark transition">Servicios</a>
             </div>
 
             <!-- CTA Desktop -->
@@ -140,10 +140,10 @@
                 <i class="fa-solid fa-xmark text-4xl"></i>
             </button>
             
-            <a href="#problema" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Soluciones</a>
+            <a href="#problema" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Es para mí?</a>
             <a href="#metodo" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">El Método</a>
             <a href="#bio" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Dr. Nicasio</a>
-            <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Programas</a>
+            <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Servicios</a>
             
             <a href="https://tu-url-del-test.com" target="_blank" class="bg-sama-accent text-sama-text px-8 py-4 rounded-full font-bold text-xl shadow-md border border-orange-200/50 mt-8 hover:bg-orange-200 transition">
                 ¿Cuál es mi dosha?
@@ -183,7 +183,7 @@
 
                     <!-- GRUPO 2: Botón Secundario -->
                     <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-md flex items-center justify-center text-center">
-                        Ver Programas
+                        Ver Servicios
                     </a>
                 </div>
             </div>
