--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
         </div>
     </section>
 
+                        <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-md flex items-center justify-center text-center">
+                        Quiero saber más
+                    </a>
+                </div>
+            </div>
+
     <!-- The Method Section -->
     <section id="metodo" class="py-12 md:py-20 !bg-sama-base relative">
         <div class="container mx-auto px-4">
@@ -323,6 +329,12 @@
             </div>
         </div>
     </section>
+
+                           <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-md flex items-center justify-center text-center">
+                        Quiero empezar
+                    </a>
+                </div>
+            </div> 
 
     <!-- Authority Bio Section -->
     <section id="bio" class="py-12 md:py-20 bg-white">
