--- a/index.html
+++ b/index.html
@@ -232,15 +232,15 @@
                     <i class="fa-solid fa-circle-check text-sama-dark mr-2"></i>
                     No estás sola/o. Esto es más común de lo que creés y <span class="font-bold">tiene solución</span> a través del Sistema Sama Sana.
                 </p>
-            </div>
-        </div>
-    </section>
-
-                        <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-md flex items-center justify-center text-center">
+                <!-- Botón Centrado "Quiero saber más" -->
+                <div class="flex justify-center md:justify-start mt-4">
+                    <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary px-8 py-3 rounded-full font-bold transition shadow-md inline-flex items-center justify-center text-center w-auto">
                         Quiero saber más
                     </a>
                 </div>
             </div>
+        </div>
+    </section>
 
     <!-- The Method Section -->
     <section id="metodo" class="py-12 md:py-20 !bg-sama-base relative">
@@ -330,11 +330,15 @@
         </div>
     </section>
 
-                           <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-md flex items-center justify-center text-center">
+                <!-- Botón Centrado "Quiero empezar" -->
+                <div class="flex justify-center mt-8">
+                    <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary px-10 py-3 rounded-full font-bold transition shadow-md inline-flex items-center justify-center text-center w-auto text-lg">
                         Quiero empezar
                     </a>
                 </div>
-            </div> 
+            </div>
+        </div>
+    </section>
 
     <!-- Authority Bio Section -->
     <section id="bio" class="py-12 md:py-20 bg-white">
