--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <!-- CTA Desktop -->
             <a href="https://tu-url-del-test.com" target="_blank" class="hidden md:inline-block bg-sama-accent hover:bg-orange-200 text-sama-text px-6 py-2 rounded-full font-bold transition shadow-md text-sm border border-orange-200/50">
-                ¿Cuál es mi dosha?
+               ¿Cuál es mi biotipo (dosha)?
             </a>
 
               <!-- Botón Hamburguesa -->
@@ -146,7 +146,7 @@
             <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Servicios</a>
             
             <a href="https://tu-url-del-test.com" target="_blank" class="bg-sama-accent text-sama-text px-8 py-4 rounded-full font-bold text-xl shadow-md border border-orange-200/50 mt-8 hover:bg-orange-200 transition">
-                ¿Cuál es mi dosha?
+                ¿Cuál es mi biotipo (dosha)?
             </a>
         </div>
     </nav>
@@ -174,7 +174,7 @@
                     <!-- GRUPO 1: Botón Principal (URL Externa) + Leyenda -->
                     <div class="flex flex-col items-center sm:items-start gap-3 w-full sm:w-auto">
                         <a href="https://tu-url-del-test.com" target="_blank" class="bg-sama-accent hover:bg-orange-300 text-sama-text w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-lg flex items-center justify-center gap-3 transform hover:scale-105 duration-200 border border-orange-200 cursor-pointer text-center">
-                            <i class="fa-solid fa-dna"></i> ¿CUÁL ES MI DOSHA?
+                            <i class="fa-solid fa-dna"></i> ¿Cuál es mi biotipo (dosha)?
                         </a>
                         <p class="text-xs text-gray-600 italic leading-tight text-center sm:text-left max-w-[240px]">
                             <i class="fa-regular fa-clock mr-1 text-sama-dark"></i> Te tomará menos de 3 minutos. Recibí tu diagnóstico y plan de acción.
@@ -230,7 +230,7 @@
             <div id="problemSummary" class="hidden mt-8 md:mt-10 p-6 bg-sama-light border-l-4 border-sama-primary rounded-r-lg max-w-4xl mx-auto text-center md:text-left animate-pulse">
                 <p class="text-lg !text-sama-text font-medium">
                     <i class="fa-solid fa-circle-check text-sama-dark mr-2"></i>
-                    No estás sola/o. Esto es más común de lo que creés y <span class="font-bold">tiene solución</span> a través del Sistema Sama Sana.
+                    No eres la única persona pasando por esto. Esto es más común de lo que creés y <span class="font-bold">tiene solución</span> a través del Sistema Sama Sana.
                 </p>
                 <!-- Botón Centrado "Quiero saber más" -->
                 <div class="flex justify-center md:justify-start mt-4">
@@ -392,7 +392,7 @@
                         </div>
 
                         <div class="border-t border-sama-primary/30 pt-6">
-                            <p class="italic !text-gray-700 text-sm">"Mi misión es simple: Apoderarte para que te vuelvas tu propia/o médica/o y empieces a construir tu salud."</p>
+                            <p class="italic !text-gray-700 text-sm">"Mi misión es simple: Apoderarte para que tomes las riendas del cuidado de tu salud."</p>
                         </div>
                     </div>
                 </div>
