--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
     <script>
         const problems = [
             { icon: "fa-heart-pulse", text: "Estudios normales, pero te sentís mal" },
-            { icon: "fa-brain", text: "Abrumada/o con tanta información sobre salud" },
+            { icon: "fa-brain", text: "Te abruma tanta información sobre salud" },
             { icon: "fa-user-nurse", text: "Medicina convencional insuficiente" },
             { icon: "fa-face-tired", text: "Emociones obstaculizan tu día" },
             { icon: "fa-spa", text: "Necesidad de conexión espiritual" },
