--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="container mx-auto px-4">
             <div class="text-center max-w-3xl mx-auto mb-10 md:mb-16">
                 <h2 class="font-serif text-2xl md:text-4xl !text-sama-text font-bold mb-4">¿Alguna de estas situaciones te resulta familiar?</h2>
-                <p class="!text-gray-600">Muchas veces los síntomas son el lenguaje del cuerpo pidiendo un cambio. Hacé clic en las tarjetas con las que te sientas identificada/o.</p>
+                <p class="!text-gray-600">Muchas veces los síntomas son el lenguaje del cuerpo pidiendo un cambio. Hacé clic en las tarjetas con las que te identifiques.</p>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 max-w-5xl mx-auto" id="problemGrid">
