--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                     <!-- PISO DE ARRIBA: Contenido (Fondo Blanco) -->
                     <div class="p-6 flex-grow">
                         <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
-                       h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
+                       <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
                         <p class="text-gray-600 text-sm mb-6">Diagnóstico profundo y plan de tratamiento específico.</p>
                         
                         <!-- Botones Switch -->
