--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                         <!-- Acción: Dr (Oculta) -->
                         <div id="action-dr" class="hidden">
                             <p class="text-3xl font-bold text-sama-text mb-4">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
+                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-gray-800 hover:bg-yellow-500 text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
                         </div>
 
                     </div>
