--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <!-- Menú Desktop -->
             <div class="hidden md:flex space-x-8 text-sama-text font-medium">
-                <a href="#problema" class="hover:text-sama-dark transition">Es para mí?</a>
+                <a href="#problema" class="hover:text-sama-dark transition">¿Te Identificas?</a>
                 <a href="#metodo" class="hover:text-sama-dark transition">El Método</a>
                 <a href="#bio" class="hover:text-sama-dark transition">Dr. Nicasio</a>
                 <a href="#ofertas" class="hover:text-sama-dark transition">Servicios</a>
@@ -140,7 +140,7 @@
                 <i class="fa-solid fa-xmark text-4xl"></i>
             </button>
             
-            <a href="#problema" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Es para mí?</a>
+            <a href="#problema" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">¿Te Identificas?</a>
             <a href="#metodo" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">El Método</a>
             <a href="#bio" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Dr. Nicasio</a>
             <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Servicios</a>
