--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="#metodo" class="hover:text-sama-dark transition">El Método</a>
                 <a href="#bio" class="hover:text-sama-dark transition">Dr. Nicasio</a>
                 <a href="#ofertas" class="hover:text-sama-dark transition">Servicios</a>
-                 <a href="#newsletter" class="hover:text-sama-dark transition font-bold text-sama-primary">Newsletter</a>
+                <a href="#newsletter" class="hover:text-sama-dark transition">Newsletter</a>
             </div>
 
             <!-- CTA Desktop -->
@@ -145,9 +145,9 @@
             <a href="#metodo" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">El Método</a>
             <a href="#bio" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Dr. Nicasio</a>
             <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Servicios</a>
-            <a href="#newsletter" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 border-t border-gray-100 text-lg text-sama-primary">Newsletter</a>
+            <a href="#newsletter" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 text-lg">Newsletter</a>>Newsletter</a>
             
-            <a href="https://tu-url-del-test.com" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-4 rounded-full font-bold w-full shadow-md border-2 border-orange-400 mt-4 text-lg">
+            <a href="https://tu-url-del-test.com" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-4 rounded-full font-bold w-full shadow-md border-2 border-orange-400 mt-4 text-lg text-center">
                 ¿Cuál es mi biotipo (dosha)?
             </a>
         </div>
@@ -249,7 +249,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col lg:flex-row gap-10 md:gap-16 items-center">
                 
-                <div class="lg:w-1/2">
+                <div class="lg:w-1/2 text-center">
                     <h2 class="font-serif text-2xl md:text-4xl !text-sama-text font-bold mb-6">El Sistema Sama Sana</h2>
                     <p class="!text-gray-700 mb-6 text-lg">
                         No es una dieta más. Es un camino de autoconocimiento y salud sostenible que integra la ciencia médica moderna con la sabiduría del Ayurveda.
@@ -630,7 +630,7 @@
     <!-- Footer -->
     <footer class="bg-sama-light text-sama-text py-12">
         <div class="container mx-auto px-4 flex flex-col items-center text-center">
-            <div class="mb-8">
+            <div class="mb-4">
                 <h3 class="font-serif text-2xl font-bold text-sama-dark">Sama<span class="font-light">Equilibrio</span></h3>
                 <p class="text-gray-700 text-sm mt-2 font-medium tracking-wide">medicina, empatía y conciencia</p>
             </div>
