--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             <a href="#metodo" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">El Método</a>
             <a href="#bio" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Dr. Nicasio</a>
             <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Servicios</a>
-            <a href="#newsletter" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 text-lg">Newsletter</a>>Newsletter</a>
+            <a href="#newsletter" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 text-lg">Newsletter</a>
             
-            <a href="https://tu-url-del-test.com" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-4 rounded-full font-bold w-full shadow-md border-2 border-orange-400 mt-4 text-lg text-center">
+            <a href="https://tu-url-del-test.com" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-4 rounded-full font-bold w-auto text shadow-md border-2 border-orange-400 mt-4 text-lg text-center">
                 ¿Cuál es mi biotipo (dosha)?
             </a>
         </div>
@@ -630,7 +630,7 @@
     <!-- Footer -->
     <footer class="bg-sama-light text-sama-text py-12">
         <div class="container mx-auto px-4 flex flex-col items-center text-center">
-            <div class="mb-4">
+            <div class="mb-2">
                 <h3 class="font-serif text-2xl font-bold text-sama-dark">Sama<span class="font-light">Equilibrio</span></h3>
                 <p class="text-gray-700 text-sm mt-2 font-medium tracking-wide">medicina, empatía y conciencia</p>
             </div>
