--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </p>
 
                     <!-- Accordion -->
-                    <div class="space-y-4">
+                    <div class="space-y-4 text-left">
                         <div class="bg-white p-4 rounded-lg shadow-sm cursor-pointer hover:bg-gray-50 transition border-l-4 border-sama-accent">
                             <h4 class="font-bold !text-sama-text flex items-center">
                                 <i class="fa-solid fa-apple-whole w-8 text-yellow-600"></i> Inteligencia Nutricional
