--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                     <!-- Detalle dorado sutil -->
                     <div class="absolute left-0 top-0 h-full w-1 bg-sama-academy"></div>
                     <div class="relative z-10 w-full md:w-2/3 mb-4 md:mb-0">
-                        <span class="text-sama-academy text-xs font-bold px-3 py-1 border border-sama-academy rounded-full uppercase mb-2 inline-block">Formación Profesional</span>
+                        <span class="bg-sama-academy text-white text-xs font-bold px-3 py-1 rounded-full uppercase mb-2 inline-block">Formación Profesional</span>
                         <h3 class="font-serif text-3xl font-bold mb-2 text-sama-text">Academia Sama Marga</h3>
                         <p class="text-gray-600 mb-4">¿Te gustaría ser terapeuta Ayurveda? Formate con el método del Dr. Nicasio.</p>
                     </div>
